# books_store

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO  docker-compose.yaml
alembic_migrations/: pyproject.toml
alembic_migrations/src/services/db/: database.py
alembic_migrations/src/services/db/models/: base_model.py  user.py
alembic_migrations/src/services/migrations/: env.py
alembic_migrations/src/services/migrations/versions/: 0e745166d16d_.py  d288ffc7c3b6_.py
authorizer/: dockerfile  entrypoint.sh  pyproject.toml  sync_dependencies.sh
authorizer/certs/: generate_your_keys.txt
authorizer/src/core/: utils.py
authorizer/src/services/: server.py
authorizer/src/services/auth/: auth_service.py  sessions_manager.py
authorizer/src/services/db/: database.py
authorizer/src/services/jwt/: jwt_parser.py
authorizer/src/services/media_process/: media_processor.py
authorizer/src/services/routers/: __init__.py  base_router.py  token_router.py  user_router.py
authorizer/src/services/routers/tokens/: token_router.py
authorizer/src/services/routers/users/: user_router.py
authorizer/src/services/s3/: s3.py
authorizer/src/services/valkey/: valkey.py
catalog/: main.py  pyproject.toml
catalog/src/services/: server.py
catalog/src/services/auth/: auth_service.py  sessions_manager.py
catalog/src/services/db/: database.py
catalog/src/services/jwt/: jwt_parser.py
catalog/src/services/media_process/: media_processor.py
catalog/src/services/routers/: __init__.py  base_router.py
catalog/src/services/routers/catalog/: catalog_router.py
catalog/src/services/valkey/: valkey.py
db_manager/: dockerfile  pyproject.toml  sync_dependencies.sh
db_manager/src/core/: config.py  utils.py
db_manager/src/notebooks/: create_all_tables.ipynb  drop_all_tables.ipynb  generate_data.ipynb
db_manager/src/notebooks/data/: example_data.py
db_manager/src/services/: server.py
db_manager/src/services/db/: database.py
db_manager/src/services/routers/: __init__.py  author_router.py  base_router.py  delivery_groups_router.py  user_router.py
frontend/: .htmlvalidate.json  eslint.config.js  index.html  package.json  styles.css  tsconfig.json  vite.config.mts
frontend/src/: main.ts
frontend/src/analytics/: logger.ts
frontend/src/api/: auth.ts  categories.ts  client.ts  product_types.ts
frontend/src/core/: utils.ts
frontend/src/styles/: main.css
frontend/src/types/: categories.ts  product_type.ts  register.ts
frontend/src/ui/: auth-modal.ts  nav.ts
gateway/: .dockerignore  main.py  pyproject.toml
gateway/src/core/: config.py  utils.py
gateway/src/services/: server.py
gateway/src/services/auth/: auth_service.py  sessions_manager.py
gateway/src/services/cors/: cors.py
gateway/src/services/db/: database.py
gateway/src/services/db/models/: __init__.py  base_model.py  user.py
gateway/src/services/db/schemas/: __init__.py  base_schema.py  jwt.py
gateway/src/services/jwt/: jwt_authorize.py  jwt_parser.py
gateway/src/services/routers/: __init__.py  base_router.py  gateway_router.py  jwt_router.py
gateway/src/services/s3/: s3.py
gateway/src/services/valkey/: valkey.py
main/: dockerfile  main.py  pyproject.toml
main/src/core/: utils.py
main/src/services/: books.py
nginx/: dockerfile
nginx/init-scripts/: default.conf.template  entrypoint.sh
postgres/: dockerfile
postgres/init-scripts/: entrypoint.sh  init-template.sql
server/: db.ipynb  dbctl.py  main.py  migrations.ipynb  pyproject.toml  seed.py
server/src/core/: config.py  logging.py  utils.py
server/src/migrations/: env.py
server/src/migrations/versions/: ce517d6eea64_.py
server/src/notebooks/: db.ipynb  example_data.py  generate_data.ipynb  manage_db.ipynb
server/src/services/: database.py  server.py
server/src/services/db/: database.py  models.py  schemas.py  shemas.py
server/src/services/db/models/: __init__.py  base_model.py
server/src/services/db/schemas/: __init__.py  user.py
server/src/services/routers/: __init__.py  author_router.py  base_router.py  delivery_groups_router.py  user_router.py
valkey/: dockerfile
