[project]
name = "db_manager"
version = "0.1.0"
requires-python = "==3.13.5"
dependencies = [
    "loguru==0.7.3",
    "colorama==0.4.6",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]==3.2.9",
    "python-dotenv==1.1.0",
    "asyncpg==0.30.0",
    "alembic==1.12.0",
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "chardet==5.2.0",    
    "Authlib==0.14.3",
    "itsdangerous==1.1.0",
    "passlib==1.7.2",
    "bcrypt==3.2.0",
    "pyjwt==1.7.1",
    "pydantic==2.11.7",
    "tabulate==0.9.0",
    "notebook>=7.0",
    "jupyterlab>=4.0",
    "jinja2>=3.1.2",
    "bs_models @ git+https://github.com/dagahan/bs_models.git"
]


[tool.ruff]
line-length = 88


[tool.ruff.lint]
extend-select = ["W", "N", "R", "I"]
# Letters means included rules classes from PEP8
ignore = ["W293", "F403", "F405"]


[db]
echo = false
pool_size = 5
max_overflow = 10