[project]
name = "gateway"
version = "0.1.0"
requires-python = "==3.13.5"
dependencies = [
    "loguru==0.7.3",
    "colorama==0.4.6",
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "chardet==5.2.0",    
    "python-dotenv==1.1.0",
    "Authlib==0.14.3",
    "itsdangerous==1.1.0",
    "passlib==1.7.2",
    "pydantic==2.11.7",
    "bcrypt==4.3.0",
    "valkey==6.1.0",
    "redis==6.4.0",
    "SQLAlchemy==2.0.41",
    "psycopg[binary]",
    "asyncpg",
    "alembic==1.12.0",
    "httpx[http2]==0.28.1",
    "python-jose[cryptography]==3.3.0",
    "cryptography==42.0.8",
    "bs_models @ git+https://github.com/dagahan/bs_models.git",
    ]


[tool.ruff]
line-length = 88


[tool.ruff.lint]
extend-select = ["W", "N", "R", "I"]
# Letters means included rules classes from PEP8
ignore = ["W293", "F403", "F405"]


[jwt]
public_key = "certs/jwt-public.pem"